gcc:

PR target/45233
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address):
	Only expand a symbol ref. into an access when the entity is defined
	in the TU.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181315 138bc75d-0d04-0410-961f-82ee72b054a4